--- a/plugin.yml
+++ b/plugin.yml
@@ -5,4 +5,4 @@ api: [1.2.0]
 
 load: POSTWORLD
 authors: Syntaxious
-description: Disables Join and Quit messages!
+description: Disables Join and Quit messages! - Edit
